packages/dubbd-legacy-reqs/manifests/gitlab-ssh-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gitlab-ssh-gateway
  namespace: istio-tenant-gateway
spec:
  selector:
    app: tenant-ingressgateway
  servers:
    - hosts:
      - gitlab.###ZARF_VAR_DOMAIN###
      port:
        name: tcp-ssh
        number: 2022
        protocol: TCP
